providing alternative to cookie auth